kyy-k8s-config/src/app/website/website-news-kaoyaya/website-news-kaoyaya-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website-news-kaoyaya
  name: website-news-kaoyaya
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: website-news-kaoyaya
