kyy-k8s-config/src/app/website/website-news-kaoyaya/website-news-kaoyaya-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: website-news-kaoyaya
  name: website-news-kaoyaya
spec:
  rules:
    - host: news.kaoyaya.com
      http:
        paths:
          - backend:
              serviceName: website-news-kaoyaya
              servicePort: 80
